12/23/24
-Added context menu options for using the bathroom with a urinal, toilet, ground, and on self
-Added UrinateAction and DefecateAction actions
-GetSoilableClothing() BathroomUtils function
-Added "Liquid Laxative" and "Liquid Diuretic" liquids
-Made Pee, Laxative, and Diuretic liquids mixable.
-Added "Filtered Urine" liquid
-Revamped sandbox options page
-Added more underwear to the clothing overlay list
-Separated out "UrinateAction" and "DefecateAction" timed actions into three types
-Added HumanUrine_Small, HumanUrine_Large, HumanFeces items.
-Made HumanUrine_Small spawn when the player pees themselves wearing clothes
-Made HumanUrine_Large spawn when the player pees without clothes, either by squatting or having an accident without clothes
-Made HumanFeces spawn when the player poops on the ground

12/22/24
-Created several peed bottoms overlays, created a script that allows these to be applied when necessary.
-Removed display name from clothing items so it no longer shows up in inventory
-Added functionality to "Show Pee Stain" in Sandbox settings
-Added updated Build 42-style Urination and Defecation moodle icons

12/20/24
-Made PeedSelf and PoopedSelf moodles depend on the PeedSeverity and PoopedSeverity values on each clothing item. Which means, moodle disappears after 10 minutes of taking the soiled clothes off.

12/19/24
-Moved Translate to lua/shared to fix
-Added "Defecation" and "Urination" moodles
-Added "PoopedSelf" and "PeedSelf" moodles

12/18/24
-Added original assets
-Created "Urine" liquid type
-Reimplemented main BathroomFunctions.lua script, pee and poop meter
-Reimplemented Sandbox variables