@@ -4,30 +4,16 @@ function SelfDefecate:isValid()
 end
 
 function SelfDefecate:update()
-	if self.usingToilet then
-		local props = self.toiletObject:getProperties()
-
-		if (props:Val("Facing") == "N") then
-			self.character:setDir(IsoDirections.N)
-		elseif (props:Val("Facing") == "E") then
-			self.character:setDir(IsoDirections.E)
-		elseif (props:Val("Facing") == "S") then
-			self.character:setDir(IsoDirections.S)
-		elseif (props:Val("Facing") == "W") then
-			self.character:setDir(IsoDirections.W)
-		end
-	end
+	-- Reduce urination value proportionally to the elapsed time
+    local delta = self:getJobDelta() -- Get the progress of the action (0.0 to 1.0)
+    local initialValue = self.character:getModData().defecateValue
+    local newValue = self.initialDefecateValue - (delta * self.initialDefecateValue)
+    self.character:getModData().defecateValue = math.max(newValue, 0) -- Ensure it doesn't go below 0
 end
 
 function SelfDefecate:start()
-	-- Remove clothing items before starting the defecation
-    self.removedClothing = {}
-
-	if self.usingToilet then
-		self:setActionAnim("bathroomSitToilet")
-	else
-		self:setActionAnim("bathroomSquat")
-	end
+	-- Save the initial defecate value at the start of the action
+    self.initialDefecateValue = self.character:getModData().defecateValue or 0
 end
 
 function SelfDefecate:stop()
