@@ -4,6 +4,12 @@ function ToiletDefecate:isValid()
 end
 
 function ToiletDefecate:update()
+	-- Reduce defecation value proportionally to the elapsed time
+    local delta = self:getJobDelta() -- Get the progress of the action (0.0 to 1.0)
+    local initialValue = self.character:getModData().defecateValue
+    local newValue = self.initialDefecateValue - (delta * self.initialDefecateValue)
+    self.character:getModData().defecateValue = math.max(newValue, 0) -- Ensure it doesn't go below 0
+
 	if self.usingToilet then
 		local props = self.toiletObject:getProperties()
 
@@ -20,6 +26,9 @@ function ToiletDefecate:update()
 end
 
 function ToiletDefecate:start()
+	-- Save the initial defecation value at the start of the action
+    self.initialDefecateValue = self.character:getModData().defecateValue or 0
+
 	-- Remove clothing items before starting the defecation
     self.removedClothing = {}
 
